feat(sync): DM offline queue edits and deletions in one sync event [IMP-MA-07]
Made-with: Cursor